# RabbitBAM-X

./: CMakeLists.txt  README.md  build_ext_sw.sh  build_ext_x86.sh  compile_flags.txt
ext/htslib-1.20/: build_hts.sh  build_hts_sw.sh  config.h  config.mk  config.status  htslib-uninstalled.pc
ext/libdeflate-1.20/: build_deflate.sh  build_deflate_sw.sh
ext/swlu/include/: backtrace.h  swdef.h  swlu.h  userdef.h
include/: BamTools.h
slave/: slave.cpp
slave/slave_zlib/: deflate_compress.c  deflate_decompress.c  lib_common.h  utils.c
src/: BamBlock.cpp  BamCompleteBlock.cpp  BamCompress.cpp  BamRead.cpp  BamReader.cpp  BamWriteBlock.cpp  BamWriteCompress.cpp  BamWriter.cpp  block_mul.cpp
